log
Wed 24 Apr 2024 09:22:10 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
111b9ef
Wed 24 Apr 2024 09:22:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:12: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   57 |         map->buckets[i]=NULL;
      |         ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7c51ba0
Wed 24 Apr 2024 09:26:59 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:12: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   57 |         map->buckets[i]=NULL;
      |         ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
923592b
Wed 24 Apr 2024 09:29:41 PM UTC: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:59:8: error: ‘*map.buckets’ is used uninitialized [-Werror=uninitialized]
   59 |     map->buckets [capacity] = NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9d8258f
Wed 24 Apr 2024 09:31:09 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
04ff9b1
Wed 24 Apr 2024 09:31:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8adb573
Wed 24 Apr 2024 10:17:50 PM UTC: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
6afe499
Thu 25 Apr 2024 03:13:56 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
aac5f59
Thu 25 Apr 2024 03:21:14 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
0a376c2
Thu 25 Apr 2024 03:25:15 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 30/70
cba9650
Thu 25 Apr 2024 03:28:20 PM UTC: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  8|3
total_score: 40/70
f06ef69
Thu 25 Apr 2024 03:29:25 PM UTC: 
 hashmap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  8|3
total_score: 40/70
bd5740c
